--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.14",
+    "@types/mustache": "^4.2.5",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
