--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.7.1",
     "typescript": "^5.1.3"
   },
   "jest": {
