--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.1.0",
     "mustache": "^4.2.0",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
